--- a/pom.xml
+++ b/pom.xml
@@ -164,11 +164,16 @@
             <version>2.12.2</version>
             <scope>provided</scope>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>info.cukes</groupId>-->
+            <!--<artifactId>cucumber-spring</artifactId>-->
+            <!--<version>${cucumber.version}</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>info.cukes</groupId>
-            <artifactId>cucumber-spring</artifactId>
+            <artifactId>cucumber-jvm</artifactId>
             <version>${cucumber.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <!-- logging -->
