more changes to the pom and Readme files for junit and testNg projects

--- a/junitProjects/pom.xml
+++ b/junitProjects/pom.xml
@@ -185,7 +185,12 @@
                             <includes>
                                 <include>**/unit*/*.java</include>
                             </includes>
+							
+							<parallel>methods</parallel>
+							<threadCount>2</threadCount>
                         </configuration>
+						
+
                     </execution>
 				</executions>
             </plugin>
