--- a/testNgProjects/pom.xml
+++ b/testNgProjects/pom.xml
@@ -65,9 +65,8 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.14.2</version>
-			<scope>test</scope>
+            <!--<scope>compile</scope>-->
         </dependency>
-
         <!-- for assertThat -->
 		<dependency>
 			<groupId>org.hamcrest</groupId>
